@@ -58,6 +58,7 @@ CPreferencesDlg::CPreferencesDlg(COptionsMgr *regOptions, SyntaxColors *colors,
 , m_pageBackups(regOptions)
 , m_pageVss(regOptions)
 , m_pageShell(regOptions)
+, m_pageCompareFolder(regOptions)
 {
 	UNREFERENCED_PARAMETER(nMenuID);
 }
@@ -100,7 +101,8 @@ BOOL CPreferencesDlg::OnInitDialog()
 	// For example "General" creates top-level "General" page
 	// and "General>Colors" creates "Colors" sub-page for "General"
 	AddPage(&m_pageGeneral, IDS_OPTIONSPG_GENERAL);
-	AddPage(&m_pageCompare, IDS_OPTIONSPG_COMPARE);
+	AddPage(&m_pageCompare, IDS_OPTIONSPG_COMPARE, IDS_OPTIONSPG_GENCOMPARE);
+	AddPage(&m_pageCompareFolder, IDS_OPTIONSPG_COMPARE, IDS_OPTIONSPG_FOLDERCOMPARE);
 	AddPage(&m_pageEditor, IDS_OPTIONSPG_EDITOR);
 	AddPage(&m_pageMergeColors, IDS_OPTIONSPG_COLORS, IDS_OPTIONSPG_MERGECOLORS);
 	AddPage(&m_pageSyntaxColors, IDS_OPTIONSPG_COLORS, IDS_OPTIONSPG_SYNTAXCOLORS);
@@ -260,6 +262,7 @@ void CPreferencesDlg::ReadOptions(BOOL bUpdate)
 	m_pageSyntaxColors.ReadOptions();
 	m_pageSystem.ReadOptions();
 	m_pageCompare.ReadOptions();
+	m_pageCompareFolder.ReadOptions();
 	m_pageEditor.ReadOptions();
 	m_pageCodepage.ReadOptions();
 	m_pageVss.ReadOptions();
@@ -275,6 +278,7 @@ void CPreferencesDlg::ReadOptions(BOOL bUpdate)
 		SafeUpdatePage(&m_pageSyntaxColors, FALSE);
 		SafeUpdatePage(&m_pageSystem, FALSE);
 		SafeUpdatePage(&m_pageCompare, FALSE);
+		SafeUpdatePage(&m_pageCompareFolder, FALSE);
 		SafeUpdatePage(&m_pageEditor, FALSE);
 		SafeUpdatePage(&m_pageCodepage, FALSE);
 		SafeUpdatePage(&m_pageVss, FALSE);
@@ -292,6 +296,7 @@ void CPreferencesDlg::SaveOptions()
 	m_pageGeneral.WriteOptions();
 	m_pageSystem.WriteOptions();
 	m_pageCompare.WriteOptions();
+	m_pageCompareFolder.WriteOptions();
 	m_pageEditor.WriteOptions();
 	m_pageMergeColors.WriteOptions();
 	m_pageTextColors.WriteOptions();
